fix language selector alignment

--- a/src/assets/home.css
+++ b/src/assets/home.css
@@ -143,7 +143,6 @@ header .links a:hover {
   padding: 0 10px;
   border-radius: 4px;
   font-size: 22px;
-  vertical-align: middle;
 }
 
 .language-dropdown ul {
